; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_DecoderUpdateFormatLocked.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_DecoderUpdateFormatLocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { i32, i32*, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, i32 }

@memory_order_release = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.decoder_owner*)* @DecoderUpdateFormatLocked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DecoderUpdateFormatLocked(%struct.decoder_owner* %0) #0 {
  %2 = alloca %struct.decoder_owner*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  store %struct.decoder_owner* %0, %struct.decoder_owner** %2, align 8
  %4 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %5 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %4, i32 0, i32 4
  store %struct.TYPE_2__* %5, %struct.TYPE_2__** %3, align 8
  %6 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %7 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %6, i32 0, i32 3
  %8 = call i32 @vlc_mutex_assert(i32* %7)
  %9 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %10 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %9, i32 0, i32 2
  %11 = call i32 @es_format_Clean(i32* %10)
  %12 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %13 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %12, i32 0, i32 2
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = call i32 @es_format_Copy(i32* %13, i32* %15)
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %39

21:                                               ; preds = %1
  %22 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %23 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %28 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %27, i32 0, i32 1
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @vlc_meta_Delete(i32* %29)
  br label %31

31:                                               ; preds = %26, %21
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %36 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %35, i32 0, i32 1
  store i32* %34, i32** %36, align 8
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  store i32* null, i32** %38, align 8
  br label %39

39:                                               ; preds = %31, %1
  %40 = load %struct.decoder_owner*, %struct.decoder_owner** %2, align 8
  %41 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %40, i32 0, i32 0
  %42 = load i32, i32* @memory_order_release, align 4
  %43 = call i32 @atomic_store_explicit(i32* %41, i32 1, i32 %42)
  ret void
}

declare dso_local i32 @vlc_mutex_assert(i32*) #1

declare dso_local i32 @es_format_Clean(i32*) #1

declare dso_local i32 @es_format_Copy(i32*, i32*) #1

declare dso_local i32 @vlc_meta_Delete(i32*) #1

declare dso_local i32 @atomic_store_explicit(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
